--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@
     font-family: "Roboto", sans-serif;
 }
 
+body {
+    overflow-x: hidden;
+}
+
 .hero{
     position:relative;
     background:#825dd2;
@@ -71,4 +75,167 @@ header .nav_links a:hover{
 .container{
     width: 80%;
     margin: 0 auto;
+}
+
+.hero .container {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 10;
+}
+
+#cans {
+    position: absolute;
+    width: 35%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    z-index: 2;
+    transition: all cubic-bezier(0.19,1,0.22,1) 0.5s;
+}
+
+#leaf {
+    position: absolute;
+    top: 60%;
+    left: 10%;
+    width: 12%;
+    transition: all cubic-bezier(0.19,1,0.22,1) 0.5s;
+    z-index: 10;
+}
+
+#blackberry1 {
+    position: absolute;
+    top: 40%;
+    left: 60%;
+    transform: translate(-50%, -50%);
+    width: 13vw;
+}
+
+#blackberry2 {
+    position: absolute;
+    top: 65%;
+    left: 40%;
+    transform: translate(-50%, -50%);
+    width: 15vw;
+}
+
+#blackberry3 {
+    position: absolute;
+    top: 35%;
+    left: 40%;
+    transform: translate(-50%, -50%);
+    width: 6vw;
+}
+
+#coconoutleaf {
+    position: absolute;
+    width: 20%;
+    top: 10%;
+    right: 0;
+}
+
+.hero h1 {
+    font-size: 20vw;
+    color: white;
+    font-weight: 900;
+    letter-spacing: 10px;
+    font-family: 'Anton',serif;
+    text-transform: uppercase;
+}
+
+.about {
+    padding: 100px 0;
+    height: 100vh;
+}
+
+.about .text {
+    width: 50%;
+}
+
+.about .text h2 {
+    font-size: 3.5vw;
+    color: #0d071c;
+    text-transform: capitalize;
+    position: relative;
+    z-index: 20;
+}
+
+.about .text h2 span {
+    color: #825dd2;
+}
+
+.about .text .boxs {
+    display: flex;
+    gap: 50%;
+    margin-top: 30px;
+    margin-bottom: 60px;
+}
+
+.about .text .boxs .box img {
+    width: 25%;
+    rotate: 60deg;
+}
+
+.about .text .boxs .box h4 {
+    color: #0d071c;
+    margin: 20px 0 10px;
+    font-size: 1.1vw;
+}
+
+.about .text .boxs .box p {
+    font-size: 0.9vw;
+    color: #4b4b4b;
+}
+
+.about .text .btn {
+    transition: all 0.3s;
+    padding: 15px 45px;
+    font-size: 18px;
+    border: 1px solid #825dd2;
+    background: #825dd2;
+    color: white;
+    text-decoration: none;
+    font-weight: bold;
+    border-radius: 30px;
+}
+
+.about .text .btn:hover{
+    background: transparent;
+    color: #825dd2;
+}
+
+.stand {
+    width: 100%;
+    height: 85vh;
+    background: #bd9fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 130px;
+}
+
+.stand .container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+}
+
+.stand img {
+    width: 55%;
+}
+
+.stand h3 {
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    font-size: 26vh;
+    text-transform: uppercase;
+    font-family: "Anton",serif;
+    color: #825dd2;
+    letter-spacing: 7px;
 }
